[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
secp256k1 = { version = "0.24.1", features = ["recovery"] }
dotenv = "0.15.0"
tokio = { version="1", features = ["full"]}
chrono = "0.4"